// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Basic Page 1`] = `
<DocumentFragment>
  <div
    style="height: 100vh; width: 100vw;"
  >
    <div
      class="Page-pageContainer Page-pageWithHeader Page-backgroundStandard"
    >
      <header
        class="Page-pageHeader Page-baseBar"
      >
        <div
          class="Bar-bar Bar-auto"
          data-bar-part="Root"
        >
          <div
            class="Bar-left"
            data-bar-part="Left"
          >
            <ui5-button
              design="Transparent"
              icon="navigation-left-arrow"
              ui5-button=""
            />
          </div>
          <div
            class="Bar-center"
            data-bar-part="Center"
          >
            <div
              class="Bar-inner"
            >
              <ui5-title
                level="H5"
                ui5-title=""
              >
                Page Demo
              </ui5-title>
            </div>
          </div>
          <div
            class="Bar-right"
            data-bar-part="Right"
          />
        </div>
      </header>
      <section
        class="Page-contentSection"
        style="bottom: 0px;"
      >
        Page Content
      </section>
      <footer
        class="Page-pageFooter Page-baseBar"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Basic Page w/o back button 1`] = `
<DocumentFragment>
  <div
    style="height: 100vh; width: 100vw;"
  >
    <div
      class="Page-pageContainer Page-pageWithHeader Page-backgroundStandard"
    >
      <header
        class="Page-pageHeader Page-baseBar"
      >
        <div
          class="Bar-bar Bar-auto"
          data-bar-part="Root"
        >
          <div
            class="Bar-left"
            data-bar-part="Left"
          />
          <div
            class="Bar-center"
            data-bar-part="Center"
          >
            <div
              class="Bar-inner"
            >
              <ui5-title
                level="H5"
                ui5-title=""
              >
                Page Demo
              </ui5-title>
            </div>
          </div>
          <div
            class="Bar-right"
            data-bar-part="Right"
          />
        </div>
      </header>
      <section
        class="Page-contentSection"
        style="bottom: 0px;"
      >
        Page Content
      </section>
      <footer
        class="Page-pageFooter Page-baseBar"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Without footer and Header 1`] = `
<DocumentFragment>
  <div
    class="Page-pageContainer Page-backgroundStandard"
  >
    <section
      class="Page-contentSection"
      style="bottom: 0px;"
    >
      Page Content
    </section>
  </div>
</DocumentFragment>
`;
